[package]
name = "bip39key"
version = "0.2.0"
edition = "2021"
description = "Deterministic GPG key generation from BIP39 seed phrases"
license = "GPL-3.0-only"
keywords = ["gpg", "pgp", "bip39", "deterministic", "openpgp"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
anyhow = "1.0"
bip39 = "2.0.0"
hkdf = "0.12.4"
sha2 = "0.10.8"
sequoia-openpgp = { version = "~1.16.0", default-features = true }
clap = { version = "4.5.21", features = ["derive"] }
